Add the first cut at internationalization
Move all the UI texts to Resource.resx, so that we can switch the
display language depending on the system locale.

This is a preparation for introducing English/Chinese support to
FlexConfirmMail.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,160 @@
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RibbonButtonFlexConfirmMail" xml:space="preserve">
+    <value>FlexConfirmMail設定</value>
+  </data>
+  <data name="RibbonGroupFlexConfirmMail" xml:space="preserve">
+    <value>送信チェック</value>
+  </data>
+  <data name="SaveAndQuit" xml:space="preserve">
+    <value>保存して閉じる</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>キャンセル</value>
+  </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>秒</value>
+  </data>
+  <data name="ConfigWindowTitle" xml:space="preserve">
+    <value>FlexConfirmMail設定</value>
+  </data>
+  <data name="ConfigGeneral" xml:space="preserve">
+    <value>一般設定</value>
+  </data>
+  <data name="ConfigCount" xml:space="preserve">
+    <value>送信カウントダウン設定</value>
+  </data>
+  <data name="ConfigCountEnabled" xml:space="preserve">
+    <value>メール送信前のカウントダウンを有効化する</value>
+  </data>
+  <data name="ConfigCountAllowSkip" xml:space="preserve">
+    <value>カウントダウンのダイアログの「いますぐ送信」ボタンを有効化する</value>
+  </data>
+  <data name="ConfigCountSeconds" xml:space="preserve">
+    <value>送信までのカウントダウン秒数:</value>
+  </data>
+  <data name="ConfigWarning" xml:space="preserve">
+    <value>警告設定</value>
+  </data>
+  <data name="ConfigSafeBccEnabled" xml:space="preserve">
+    <value>To/CCに一定数以上のドメインが含まれている場合に警告する</value>
+  </data>
+  <data name="ConfigSafeBccThreshold" xml:space="preserve">
+    <value>警告対象となるドメインの数:</value>
+  </data>
+  <data name="ConfigSafeBccThresholdSuffix" xml:space="preserve">
+    <value>件以上</value>
+  </data>
+  <data name="ConfigMisc" xml:space="preserve">
+    <value>その他の設定</value>
+  </data>
+  <data name="ConfigMainSkipIfNoExt" xml:space="preserve">
+    <value>宛先が社内ドメインのみの場合は確認をスキップする</value>
+  </data>
+  <data name="ConfigTrustedDomains" xml:space="preserve">
+    <value>社内ドメイン設定</value>
+  </data>
+  <data name="ConfigTrustedDomainsTemplate" xml:space="preserve">
+    <value># 社内ドメイン設定 ###
+#
+# (1) 送信時に社内の宛先として扱うドメインを指定します。
+# (2) 以下の例のように一行に一件ずつ記載します。
+# (3) 冒頭が「#」から始まる行は無視されます。
+#
+##################################
+
+example.com
+example.org</value>
+  </data>
+  <data name="ConfigUnsafeDomainsTemplate" xml:space="preserve">
+    <value># 注意が必要なドメイン設定 ###
+#
+# (1) 送信時に警告対象とする注意ドメインを指定します。
+# (2) 以下の例のように一行に一件ずつ記載します。
+# (3) 冒頭が「#」から始まる行は無視されます。
+#
+##################################
+
+example.com
+example.org</value>
+  </data>
+  <data name="ConfigUnsafeFilesTemplate" xml:space="preserve">
+    <value># 注意が必要なファイル名設定 ###
+#
+# (1) 添付ファイルに含まれる場合に警告する注意ワードを指定します。
+# (2) 以下の例のように一行に一件ずつ記載します。
+# (3) 冒頭が「#」から始まる行は無視されます。
+#
+##################################
+
+社外秘
+機密</value>
+  </data>
+  <data name="TrustedDomains" xml:space="preserve">
+    <value>社内ドメイン</value>
+  </data>
+  <data name="ConfigUnsafeDomains" xml:space="preserve">
+    <value>注意が必要なドメイン設定</value>
+  </data>
+  <data name="UnsafeDomains" xml:space="preserve">
+    <value>注意が必要なドメイン</value>
+  </data>
+  <data name="ConfigUnsafeFiles" xml:space="preserve">
+    <value>注意が必要なファイル名設定</value>
+  </data>
+  <data name="UnsafeFiles" xml:space="preserve">
+    <value>注意が必要なファイル名</value>
+  </data>
+  <data name="AboutAddon" xml:space="preserve">
+    <value>このアドオンについて</value>
+  </data>
+  <data name="TextLog" xml:space="preserve">
+    <value>動作ログ</value>
+  </data>
+  <data name="CountWindowTitle" xml:space="preserve">
+    <value>送信カウントダウン - FlexConfirmMail</value>
+  </data>
+  <data name="CountSendInSeconds" xml:space="preserve">
+    <value>秒後に送信します</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>送信</value>
+  </data>
+  <data name="SendNow" xml:space="preserve">
+    <value>今すぐ送信</value>
+  </data>
+  <data name="MainExternal" xml:space="preserve">
+    <value>外部の送信先</value>
+  </data>
+  <data name="MainUnsafeDomainsWarning" xml:space="preserve">
+    <value>[警告] 注意が必要なドメイン（{0}）が宛先に含まれています。</value>
+  </data>
+  <data name="MainUnsafeDomainsWarningHint" xml:space="preserve">
+    <value>このドメインは誤送信の可能性が高いため、再確認を促す警告を出してします。</value>
+  </data>
+  <data name="MainUnsafeFilesWarning" xml:space="preserve">
+    <value>[警告] 注意が必要なファイル名（{0}）が含まれています。</value>
+  </data>
+  <data name="MainUnsafeFilesWarningHint" xml:space="preserve">
+    <value>添付ファイルに注意が必要な単語が含まれているため、
+再確認を促す警告を出しています。</value>
+  </data>
+  <data name="MainSafeBccWarning" xml:space="preserve">
+    <value>[警告] To・Ccに{0}件以上のドメインが含まれています。</value>
+  </data>
+  <data name="MainSafeBccWarningHint" xml:space="preserve">
+    <value>宛先に多数のドメインが検知されました。
+ToおよびCcに含まれるメールアドレスはすべての受取人が確認できるため、
+アナウンスなどを一斉送信する場合はBccを利用して宛先リストを隠します。</value>
+  </data>
+  <data name="MainFilesWarning" xml:space="preserve">
+    <value>[添付ファイル] {0}</value>
+  </data>
+  <data name="MainInternal" xml:space="preserve">
+    <value>社内の送信先</value>
+  </data>
+  <data name="MainFile" xml:space="preserve">
+    <value>添付ファイル／その他の警告</value>
+  </data>
 </root>
