--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -186,6 +186,7 @@
 #
 # さらにドメインを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、ドメインを除外することができます。
+# 指定にはワイルドカード（*および?）も使用可能です。
 ##################################
 
 {1}</value>
@@ -198,6 +199,7 @@
 #
 # さらにドメインを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、ドメインを除外することができます。
+# 指定にはワイルドカード（*および?）も使用可能です。
 ##################################
 
 {1}</value>
@@ -210,6 +212,7 @@
 #
 # さらにキーワードを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、キーワードを除外することができます。
+# 指定にはワイルドカード（*および?）も使用可能です。
 ##################################
 
 {1}</value>
@@ -232,6 +235,7 @@
 # (1) 送信時に社内の宛先として扱うドメインを指定します。
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
+# (4) 指定にはワイルドカード（*および?）を使用可能です。
 #
 ##################################
 
@@ -244,6 +248,7 @@ example.org</value>
 # (1) 送信時に警告対象とする注意ドメインを指定します。
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
+# (4) 指定にはワイルドカード（*および?）を使用可能です。
 #
 ##################################
 
