--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -186,6 +186,7 @@
 #
 # 要添加更多的域，请在下面输入条目（每行一个）。
 # 你也可以通过在开头添加"-"来排除域名。
+# And wildcards (* and ?) are also available.
 ##################################
 
 {1}</value>
@@ -198,6 +199,7 @@
 #
 # 要添加更多的域，请在下面输入条目（每行一个）。
 # 你也可以通过在开头添加"-"来排除域名。
+# And wildcards (* and ?) are also available.
 ##################################
 
 {1}</value>
@@ -210,6 +212,7 @@
 #
 # 要添加更多的关键词，请在下面输入条目（每行一个）。
 # 你也可以通过在开头添加"-"来排除关键词。
+# And wildcards (* and ?) are also available.
 ##################################
 
 {1}</value>
@@ -232,6 +235,7 @@
 # (1) 设置域被视为内部目的地
 # (2) 每行写一个条目，如下所示
 # (3) 以 "#" 开头的行被忽略
+# (4) Wildcards (* and ?) are available.
 #
 ##################################
 
@@ -244,6 +248,7 @@ example.org</value>
 # (1) 设置要被提醒的域
 # (2) 每行写一个条目，如下所示
 # (3) 以 "#" 开头的行被忽略
+# (4) Wildcards (* and ?) are available.
 #
 ##################################
 
@@ -256,6 +261,7 @@ example.org</value>
 # (1) 为附件设置警告关键字
 # (2) 每行写一个条目，如下所示
 # (3) 以 "#" 开头的行被忽略
+# (4) Wildcards (* and ?) are available.
 #
 ##################################
 
