Warn when new domains added
* Warnings are enabled for emails created with Reply button or ReplyAll button
* Data for Warnings for already created reply emails are refreshed after restarting Outlook
  * This means that after restarting Outlook, even if we restart from a draft, no warning will be displayed.
* A Warning dialog is displayed if new domains have been added.

--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -336,4 +336,14 @@ example.org</value>
   <data name="ConfigSafeNewDomainsEnabled" xml:space="preserve">
     <value>Warn if new domains are added when replying</value>
   </data>
+  <data name="ConfirmNewDomains" xml:space="preserve">
+    <value>There are recipients with domains not included in the recipients of the original message.
+
+{0}
+
+Do you really want to send this message?</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>警告</value>
+  </data>
 </root>
