--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -339,4 +339,14 @@ so please use Bcc when sending an message to unrelated parties.</value>
   <data name="ConfigSafeNewDomainsEnabled" xml:space="preserve">
     <value>Warn if new domains are added when replying</value>
   </data>
+  <data name="ConfirmNewDomains" xml:space="preserve">
+    <value>There are recipients with domains not included in the recipients of the original message.
+
+{0}
+
+Do you really want to send this message?</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>Warning</value>
+  </data>
 </root>
