--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -336,4 +336,17 @@ so please use Bcc when sending an message to unrelated parties.</value>
   <data name="MainFile" xml:space="preserve">
     <value>Attachments / Warnings</value>
   </data>
+  <data name="ConfigSafeNewDomainsEnabled" xml:space="preserve">
+    <value>Confirm when any recipients with domains different from any existing recipients are added</value>
+  </data>
+  <data name="ConfirmNewDomains" xml:space="preserve">
+    <value>There are recipients with domains not included in the recipients of the original message.
+
+{0}
+
+Do you really want to send this message?</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>Warning</value>
+  </data>
 </root>
