--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -336,14 +336,16 @@ example.org</value>
   <data name="ConfigSafeNewDomainsEnabled" xml:space="preserve">
     <value>Confirm when any recipients with domains different from any existing recipients are added</value>
   </data>
-  <data name="ConfirmNewDomains" xml:space="preserve">
-    <value>There are recipients with domains not included in the recipients of the original message.
-
-{0}
-
-Do you really want to send this message?</value>
+  <data name="ConfirmNewDomainsBody1" xml:space="preserve">
+    <value>There are recipients with domains not included in the recipients of the original message.</value>
   </data>
   <data name="Warning" xml:space="preserve">
     <value>警告</value>
+  </data>
+  <data name="ConfirmNewDomainsBody2" xml:space="preserve">
+    <value>Do you really want to send this message?</value>
+  </data>
+  <data name="WarningBody" xml:space="preserve">
+    <value>警告！</value>
   </data>
 </root>
