--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -339,13 +339,13 @@ example.org</value>
   <data name="ConfirmNewDomainsBody1" xml:space="preserve">
     <value>There are recipients with domains not included in the recipients of the original message.</value>
   </data>
-  <data name="Warning" xml:space="preserve">
-    <value>警告</value>
+  <data name="NewDomainDialogTitle" xml:space="preserve">
+    <value>警告 - FlexConfirmMail</value>
   </data>
   <data name="ConfirmNewDomainsBody2" xml:space="preserve">
     <value>Do you really want to send this message?</value>
   </data>
-  <data name="WarningBody" xml:space="preserve">
+  <data name="Warning" xml:space="preserve">
     <value>警告！</value>
   </data>
 </root>
