--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -346,6 +346,6 @@ example.org</value>
     <value>Do you really want to send this message?</value>
   </data>
   <data name="Warning" xml:space="preserve">
-    <value>警告！</value>
+    <value>⨉ 警告！</value>
   </data>
 </root>
