--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -187,6 +187,9 @@
 # To add more domains, input entries (one per line) below.
 # You can also exclude domains by adding "-" at the beginning.
 # And wildcards (* and ?) are also available.
+# You can specify not only domains but also addresses.
+#   * When an entry contains @, the entry is regarded as address.
+#   * When an entry does not contains @, the entry is regarded as domain.
 ##################################
 
 {1}</value>
@@ -236,6 +239,9 @@
 # (2) Enter one entry per line as follows.
 # (3) Lines starting with # are ignored.
 # (4) Wildcards (* and ?) are available.
+# (5) You can specify not only domains but also addresses.
+#     * When an entry contains @, the entry is regarded as address.
+#     * when an entry does not contains @, the entry is regarded as domain.
 #
 ##################################
 
