--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -187,6 +187,9 @@
 # さらにドメインを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、ドメインを除外することができます。
 # 指定にはワイルドカード（*および?）も使用可能です。
+# また、ドメインだけでなくアドレスを指定することもできます。
+# * @を含む場合はアドレスが指定されたとみなします
+# * @を含まない場合はドメインが指定されたとみなします
 ##################################
 
 {1}</value>
@@ -236,6 +239,9 @@
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
 # (4) 指定にはワイルドカード（*および?）を使用可能です。
+# (5) ドメインだけでなくアドレス全体を指定することもできます。
+#     * @を含む場合はアドレスが指定されたとみなします。
+#     * @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
