--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -173,39 +173,37 @@
     <value>その他の設定</value>
   </data>
   <data name="ConfigMainSkipIfNoExt" xml:space="preserve">
-    <value>宛先が社内ドメインのみの場合は確認をスキップする</value>
+    <value>宛先が社内のみの場合は確認をスキップする</value>
   </data>
   <data name="ConfigTrustedDomains" xml:space="preserve">
-    <value>社内ドメイン設定</value>
+    <value>社内ドメイン・アドレス設定</value>
   </data>
   <data name="TrustedDomainsPolicy" xml:space="preserve">
-    <value># 社内ドメイン設定 ###
-# 組織設定により、社内ドメインとして以下が指定されています。
+    <value># 社内ドメイン・アドレス設定 ###
+# 組織設定により、社内ドメイン・アドレスとして以下が指定されています。
 #
 # {0}
 #
-# さらにドメインを追加する場合は、以下に1行ずつ入力してください。
-# また、先頭に「-」をつけると、ドメインを除外することができます。
+# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。
+# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。
 # 指定にはワイルドカード（*および?）も使用可能です。
-# また、ドメインだけでなくアドレスを指定することもできます。
-# * @を含む場合はアドレスが指定されたとみなします
-# * @を含まない場合はドメインが指定されたとみなします
+# @を含む場合はアドレスが指定されたとみなします。
+# @を含まない場合はドメインが指定されたとみなします。
 ##################################
 
 {1}</value>
   </data>
   <data name="UnsafeDomainsPolicy" xml:space="preserve">
-    <value># 注意が必要なドメイン設定 ###
-# 組織設定により、注意が必要なドメインとして以下が指定されています。
+    <value># 注意が必要なドメイン・アドレス設定 ###
+# 組織設定により、注意が必要なドメイン・アドレスとして以下が指定されています。
 #
 # {0}
 #
-# さらにドメインを追加する場合は、以下に1行ずつ入力してください。
-# また、先頭に「-」をつけると、ドメインを除外することができます。
+# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。
+# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。
 # 指定にはワイルドカード（*および?）も使用可能です。
-# また、ドメインだけでなくアドレスを指定することもできます。
-# * @を含む場合はアドレスが指定されたとみなします
-# * @を含まない場合はドメインが指定されたとみなします
+# @を含む場合はアドレスが指定されたとみなします。
+# @を含まない場合はドメインが指定されたとみなします。
 ##################################
 
 {1}</value>
@@ -236,15 +234,14 @@
 -除外キーワード</value>
   </data>
   <data name="TrustedDomainsTemplate" xml:space="preserve">
-    <value># 社内ドメイン設定 ###
+    <value># 社内ドメイン・アドレス設定 ###
 #
-# (1) 送信時に社内の宛先として扱うドメインを指定します。
+# (1) 送信時に社内の宛先として扱うドメイン・アドレスを指定します。
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
 # (4) 指定にはワイルドカード（*および?）を使用可能です。
-# (5) ドメインだけでなくアドレス全体を指定することもできます。
-#     * @を含む場合はアドレスが指定されたとみなします。
-#     * @を含まない場合はドメインが指定されたとみなします。
+# (5) @を含む場合はアドレスが指定されたとみなします。
+# (6) @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
@@ -252,12 +249,14 @@ example.com
 example.org</value>
   </data>
   <data name="UnsafeDomainsTemplate" xml:space="preserve">
-    <value># 注意が必要なドメイン設定 ###
+    <value># 注意が必要なドメイン・アドレス設定 ###
 #
-# (1) 送信時に警告対象とする注意ドメインを指定します。
+# (1) 送信時に警告対象とする注意ドメイン・アドレスを指定します。
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
 # (4) 指定にはワイルドカード（*および?）を使用可能です。
+# (5) @を含む場合はアドレスが指定されたとみなします。
+# (6) @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
@@ -270,9 +269,6 @@ example.org</value>
 # (1) 添付ファイルに含まれる場合に警告する注意ワードを指定します。
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
-# (4) ドメインだけでなくアドレス全体を指定することもできます。
-#     * @を含む場合はアドレスが指定されたとみなします。
-#     * @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
@@ -280,13 +276,13 @@ example.org</value>
 機密</value>
   </data>
   <data name="TrustedDomains" xml:space="preserve">
-    <value>社内ドメイン</value>
+    <value>社内ドメイン・アドレス</value>
   </data>
   <data name="ConfigUnsafeDomains" xml:space="preserve">
-    <value>注意が必要なドメイン設定</value>
+    <value>注意が必要なドメイン・アドレス設定</value>
   </data>
   <data name="UnsafeDomains" xml:space="preserve">
-    <value>注意が必要なドメイン</value>
+    <value>注意が必要なドメイン・アドレス</value>
   </data>
   <data name="ConfigUnsafeFiles" xml:space="preserve">
     <value>注意が必要なファイル名設定</value>
